--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3260,7 +3260,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style4 {
-			background-color: 
+			background-color: #312450;
 		}
 
 		.wrapper.fullscreen {
